# wheeltec-sim2real

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
locate_anything_server/: DEPLOY.md  backends.py  requirements.txt  server.py  start_locate.sh
locate_anything_server/asr_server/: backends.py  download_sensevoice.sh  requirements.txt  server.py  start_asr.sh
locate_anything_server/llm_serving/: download_qwen.sh  start_ollama.sh  start_vllm.sh
ros2/: DEPLOY.md  README.md  ROS2_ENV_CLEAN_START.md
ros2/src/mini_4wd_six_arm/: CMakeLists.txt  package.xml
ros2/src/mini_4wd_six_arm/config/: joint_names_mini_4wd_six_arm.yaml
ros2/src/mini_4wd_six_arm/launch/: display.launch.py
ros2/src/wheeltec_sim2real_bridge/: package.xml  setup.cfg  setup.py
ros2/src/wheeltec_sim2real_bridge/config/: params.yaml
ros2/src/wheeltec_sim2real_bridge/launch/: bringup.launch.py  rosbridge_websocket.launch.py  sim2real_bridge.launch.py
ros2/src/wheeltec_sim2real_bridge/scripts/: start_astra_hand_camera.sh
ros2/src/wheeltec_sim2real_bridge/wheeltec_sim2real_bridge/: dual_camera_bridge.py  locate_anything_client.py  mock_joint_states.py  rgbd_tool_detector.py  serial_bridge.py
src/: AgentPanel.js  ArmKeyboardController.js  CameraView.js  ChassisController.js  DatasetGenerator.js  IKSolver.js  InstructionParser.js  LLMAgent.js  LangGraphAgent.js  MCPTools.js  MockAgent.js  RealEnvView.js  RobotModel.js  RosBridge.js  SceneLayouts.js  SceneSetup.js  SpeechRecognizer.js  TaskDecomposer.js  UIController.js  main.js  style.css
