<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mini_4wd_six_arm</name>
  <version>1.0.0</version>
  <description>
    WHEELTEC mini_4wd_six_arm URDF model package for Ubuntu 20.04 + ROS2 Foxy。
    由 ROS1 mini_4wd_six_arm 包移植: 包含 SolidWorks 导出的 URDF + 16 个 STL 网格,
    提供 robot_state_publisher 启动 (发布 TF 坐标树) 供 sim2real 数字孪生前端使用。
  </description>
  <maintainer email="wheeltec@todo.todo">wheeltec</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
